--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Anime & Manga SPA">
   <meta property="og:description" content="Capítulos, imágenes y más">
+  <meta name="monetag" content="dadbbc41c445e03e7aa160cad5ae1ce8">
   <title>Anime & Manga</title>
   <link rel="stylesheet" href="./frontend/style.css">
 </head>
