--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
   <header class="header">
     <a href="/" data-link>
-      <img src="imagen/logo.png" alt="Logo Anime & Manga" width="100" height="50">
+      <img src="./imagen/logo.png" alt="Logo Anime & Manga" width="100" height="50">
     </a>
-    <h1 class="sr-only">Anime & Manga - Portal SPA</h1>
+    
     <div class="search-container">
-      <label for="anime-search" class="sr-only">Buscar anime</label>
+      
       <input type="search" id="anime-search" placeholder="Buscar anime">
       <span class="search-icon">&#128269;</span>
       <ul id="anime-suggestions" class="autocomplete-list"></ul>
