--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header">
     <a href="/" data-link>
-      <img src="./imagen/logo.png" alt="Logo Anime & Manga" width="100" height="50">
+      <img src="./frontend/imagen/logo.png" alt="Logo Anime & Manga" width="100" height="50">
     </a>
     
     <div class="search-container">
