--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- SECCIÓN RECENTES -->
   <section id="recientes" class="recientes-section">
-    <h2>Recientes</h2>
+    <h2>Capitulos Recientes</h2>
     <div id="recientes-list" class="grid-cards"></div>
   </section>
 
