--- a/index.html
+++ b/index.html
@@ -34,19 +34,11 @@
       <div id="recientes-list" class="grid-cards"></div>
     </section>
 
-    <!-- B: Slide Estrenos -->
+    <!-- B: Slide Estrenos + Agregados (dinámicos) -->
     <aside class="slide-panel slide-estrenos">
-      <!-- Aquí se inyecta dinámicamente el contenido de estrenos -->
+      <div id="slides-root"></div> <!-- 🔧 Este div es necesario para inyectar los slides dinámicos -->
     </aside>
   </div>
-
-  <!-- Bloque secundario: Agregados -->
-  <div class="agregados">
-  <aside class="slide-panel slide-agregados">
-    <h3>Agregados</h3>
-    <!-- Aquí se inyecta dinámicamente el contenido de agregados -->
-  </aside>
-</div>
 
   <main id="app"></main>
 
