--- a/index.html
+++ b/index.html
@@ -34,11 +34,19 @@
       <div id="recientes-list" class="grid-cards"></div>
     </section>
 
-    <!-- B: Slide Estrenos + Agregados (dinámicos) -->
+    <!-- B: Slide Estrenos -->
     <aside class="slide-panel slide-estrenos">
-      <div id="slides-root"></div> <!-- 🔧 Este div es necesario para inyectar los slides dinámicos -->
+      <!-- Aquí se inyecta dinámicamente el contenido de estrenos -->
     </aside>
   </div>
+
+  <!-- Bloque secundario: Agregados -->
+  <div class="agregados">
+  <aside class="slide-panel slide-agregados">
+    <h3>Agregados</h3>
+    <!-- Aquí se inyecta dinámicamente el contenido de agregados -->
+  </aside>
+</div>
 
   <main id="app"></main>
 
