--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="actual">
     <!-- A: Capítulos Recientes -->
     <section id="recientes" class="recientes-section">
-      <h2>Capítulos Recientes</h2>
+      <h2>Cap Recientes</h2>
       <div id="recientes-list" class="grid-cards"></div>
     </section>
     
